[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taurus-protect-sdk"
version = "1.0.0"
description = "Python SDK for the Taurus-PROTECT API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Taurus SA", email = "dev@taurushq.com"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "cryptography>=41.0.0",
    "protobuf>=4.21.0",
    "python-dateutil>=2.8.0",
    "urllib3>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://www.taurushq.com"
Documentation = "https://docs.taurushq.com"
Repository = "https://github.com/taurushq-io/taurus-protect-sdk"

[tool.setuptools.packages.find]
where = ["."]
include = ["taurus_protect*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | build
    | dist
    | taurus_protect/_internal/openapi
    | taurus_protect/_internal/proto
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = ["taurus_protect/_internal/openapi", "taurus_protect/_internal/proto"]

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
exclude = [
    "taurus_protect/_internal/openapi",
    "taurus_protect/_internal/proto",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=taurus_protect --cov-report=term-missing"
log_cli = true
log_cli_level = "INFO"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
omit = [
    "taurus_protect/_internal/*",
    "tests/*",
]
